# axum-api

./: .dockerignore  .gitignore  .justfile  Cargo.toml  Dockerfile  EXAMPLE.md  README.md  docker-compose.yml  postgres.dockerfile
migrations/2023-11-20-112702_todos/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
